// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table basic 1`] = `
<table
  class="FTable-root"
>
  <thead
    class="FTableHead-headRoot"
  >
    <tr
      class="FTableRow-rowBody"
    >
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        Name
      </th>
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        Surname
      </th>
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        BirthYear
      </th>
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        BirthCity
      </th>
    </tr>
  </thead>
  <tbody
    class="FTableBody-bodyRoot"
  >
    <tr
      class="FTableRow-rowBody FTableRow-rowBody"
    >
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Mehmet
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Baran
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        1987
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        22
      </td>
    </tr>
    <tr
      class="FTableRow-rowBody FTableRow-rowBody"
    >
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        John
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Brown
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        1977
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        32
      </td>
    </tr>
    <tr
      class="FTableRow-rowBody FTableRow-rowBody"
    >
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Jim
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Black
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        1997
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        14
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should support column 1`] = `
<table
  class="FTable-root"
>
  <thead
    class="FTableHead-headRoot"
  >
    <tr
      class="FTableRow-rowBody"
    >
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        Name
      </th>
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        Surname
      </th>
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        BirthYear
      </th>
      <th
        class="FTableCell-headCellRoot FTableCell-cellTextAlignLeft"
      >
        BirthCity
      </th>
    </tr>
  </thead>
  <tbody
    class="FTableBody-bodyRoot"
  >
    <tr
      class="FTableRow-rowBody FTableRow-rowBody"
    >
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        <a
          href="#"
        >
          Mehmet
        </a>
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Baran
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        1987
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        22
      </td>
    </tr>
    <tr
      class="FTableRow-rowBody FTableRow-rowBody"
    >
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        <a
          href="#"
        >
          John
        </a>
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Brown
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        1977
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        32
      </td>
    </tr>
    <tr
      class="FTableRow-rowBody FTableRow-rowBody"
    >
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        <a
          href="#"
        >
          Jim
        </a>
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        Black
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        1997
      </td>
      <td
        class="FTableCell-cellRoot FTableCell-cellTextAlignLeft"
      >
        14
      </td>
    </tr>
  </tbody>
</table>
`;
